# robotspace

./: README.md  package.xml  setup.cfg  setup.py
config/: my_controllers.yaml
description/: camera.xacro  robot.urdf.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  rsp.launch.py
models/aruco_marker/: model.config  model.sdf
models/aruco_marker02/: model.config  model.sdf
models/aruco_marker02/materials/scripts/: aruco_marker02.material
rs_diff/: aruco_detect.py  diff_drive.py
worlds/: markers.world
