<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_diff</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abdullah.sk203@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>gazebo_ros</depend>
  <export> 
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/>  -->
    <!-- <gazebo_ros gazebo_media_path="${prefix}/models"/>  -->
    
    <build_type>ament_python</build_type>
  </export>
</package>
